--- a/XOSkinWebApp/Areas/Administration/Views/Orders/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Orders/Index.cshtml
@@ -22,9 +22,6 @@
         Status
       </th>
       <th>
-        Cancellation
-      </th>
-      <th>
         Refund
       </th>
       <th></th>
@@ -44,10 +41,7 @@
       @Html.Raw(item.Recipient)
     </td>
     <td>
-      @Html.Raw(item.Status)
-    </td>
-    <td>
-      @Html.Raw(item.CancellationStatus == null ? String.Empty : item.CancellationStatus.ToString())
+      @Html.Raw(item.CancellationStatus == null ? item.Status : item.CancellationStatus.Equals("CANCELLED") ? "CANCELLED" : item.Status)
     </td>
     <td>
       @Html.Raw(item.RefundStatus == null ? String.Empty : item.RefundStatus.ToString())
