--- a/XOSkinWebApp/Areas/Administration/Views/Shipment/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Shipment/Edit.cshtml
@@ -107,7 +107,7 @@
     </div>
   </div>
 </div>
-<h4>Items to Ship With Order</h4>
+<h4>Items to Ship With This Order</h4>
 <table class="table table-responsive" id="OrderItems" style="margin-left: auto; margin-right: auto">
   <thead>
     <tr>
