--- a/XOSkinWebApp/Areas/Administration/Views/Shipment/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Shipment/Index.cshtml
@@ -69,25 +69,25 @@
     function highlight_pending() {
       const page = document.body.innerHTML;
       document.body.innerHTML = page.replace(new RegExp("PENDING", "gi"), (match) =>
-        `<mark style="background-color: #FF7F7F">${match}</mark>`);
+        `<mark style="background-color: #ffabab">${match}</mark>`);
     }
 
     function highlight_shipped() {
       const page = document.body.innerHTML;
       document.body.innerHTML = page.replace(new RegExp("SHIPPED", "gi"), (match) =>
-        `<mark style="background-color: #90EE90">${match}</mark>`);
+        `<mark style="background-color: #abffab">${match}</mark>`);
     }
 
     function highlight_cancelled() {
       const page = document.body.innerHTML;
       document.body.innerHTML = page.replace(new RegExp("CANCELLED", "gi"), (match) =>
-        `<mark style="background-color: #90EE90">${match}</mark>`);
+        `<mark style="background-color: #abffab">${match}</mark>`);
     }
 
     function highlight_refunded() {
       const page = document.body.innerHTML;
       document.body.innerHTML = page.replace(new RegExp("REFUNDED", "gi"), (match) =>
-        `<mark style="background-color: #90EE90">${match}</mark>`);
+        `<mark style="background-color: #abffab">${match}</mark>`);
     }
 
     highlight_pending();
