Completed inventory management section.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -159,12 +159,12 @@
                       Order Fulfillment</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventory" asp-action="Index">
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventories" asp-action="Index">
                       Inventory</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Ledgers" asp-action="Index">
-                      Account Ledger</a>
+                      Transaction Ledger</a>
                   </li>
                 </ul>
               </li>
