--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -116,55 +116,74 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Languages" asp-action="Index">
-                    Languages</a>
+                      Languages
+                    </a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedTexts" 
-                      asp-action="Index">Text Localization</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedTexts"
+                       asp-action="Index">Text Localization</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedImages" 
-                      asp-action="Index">Image Localization</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="LocalizedImages"
+                       asp-action="Index">Image Localization</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questionnaires" 
-                      asp-action="Index">Questionnaires</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questionnaires"
+                       asp-action="Index">Questionnaires</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questions" 
-                      asp-action="Index">Questions</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Questions"
+                       asp-action="Index">Questions</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Roles" asp-action="Index">
-                      Application Roles</a>
+                      Application Roles
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Product" asp-action="Index">
-                    Products</a>
+                      Products
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Costs" asp-action="Index">
-                      Costs</a>
+                      Costs
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">
-                      Prices</a>
+                      Prices
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Orders" asp-action="Index">
-                      Orders</a>
+                      Orders
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipment" asp-action="Index">
-                      Order Fulfillment</a>
+                      Order Fulfillment
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventories" asp-action="Index">
-                      Inventory</a>
+                      Inventory
+                    </a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Ledgers" asp-action="Index">
-                      Transaction Ledger</a>
+                      Transaction Ledger
+                    </a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="DiscountCodes" asp-action="Index">
+                      Discount Codes
+                    </a>
+                  </li>
+                  <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="DiscountCoupons" asp-action="Index">
+                      Discount Coupons
+                    </a>
                   </li>
                 </ul>
               </li>
